Updates--

2018-10-02 v1.3.10: Added The Adovcate (theadvocate.com.au), added Examiner (examiner.com.au)
2018-09-09 v1.3.9: Added japantimes.co.jp
2018-08-31 v1.3.8: Added thestar.com
2018-07-22 v1.3.7: Added towardsdatascience.com, fixed medium.com
2018-07-22 v1.3.6: Added spectator.co.uk
2018-07-22 v1.3.5: Added newstatesman.com
2018-07-15 v1.3.4: Added OC Register (ocregister.com), added Caixin (caixinglobal.com)
2018-07-14 v1.3.3: Add back clearing of localStorage in contentScript.js (fixes wapo.com for U.S. users)
2018-07-08 v1.3.2: Fixed Haaretz (haaretz.co.il)
2018-07-07 v1.3.1: Added Business Insider (businessinsider.com)
2018-07-04 v1.3.0: Added The Denver Post (denverpost.com, note: need to turn off uBlock for this site), added Hacked (hacked.com)
2018-06-20 v1.2.10: Added The Business Journals (bizjournals.com)
2018-06-27 v1.2.9: Fixed The Washington Post (washingtonpost.com)
2018-06-22 v1.2.8: Added Vanity Fair (vanityfair.com), added The Globe and Mail (theglobeandmail.com)
2018-06-03 v1.2.7: Added Wired (wired.com)
2018-05-20 v1.2.6: Added TheMarker (themarker.com)
2018-05-12 v1.2.5: Fixed Boston Globe (bostonglobe.com)
2018-05-10 v1.2.4: Fixed redirect issue
2018-05-05 v1.2.3: Added Bloomberg (bloomberg.com)
2018-04-23 v1.2.2: Added the English Version of Haaretz website (haaretz.com)
2018-04-07 v1.2.1: Open Source'd Bypass Paywalls! Fixed The Economist (economist.com)
2018-04-05 v1.2.0: Added dark theme icon (thanks to Geoffrey De Belie), added Corriere Della Sera (corriere.it), added Dagens Nyheter (dn.se), fixed The Age (theage.com.au)
2018-01-30 v1.1.0: Added Medium (medium.com), added The Boston Globe (bostonglobe.com), added The Mercury News (mercurynews.com), removed The Australian (theaustralian.com.au), removed The Courier Mail (couriermail.com.au), removed The Telegraph (telegraph.co.uk)
2017-09-14 v1.09: Added back Barron's, added Het Financieele Dagblad (fd.nl), added Le Temps (letemps.ch), added Haaretz (haaretz.co.il)