@@ -43,5 +43,5 @@
 		"webRequest",
 		"webRequestBlocking"
 	],
-	"version": "1.3.9"
+	"version": "1.3.11"
 }
