@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Bypass Paywalls Options</title>
   <style>
     #bypass_sites label {
@@ -31,6 +32,7 @@
     <button id="select-all">Select all</button>
     <button id="select-none">Select none</button>
   </span>
+  <br/><br/>
   <script src="options.js"></script>
 </body>
 </html>
