@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+   <meta charset="utf-8">
+</head>
 <body>
-<div style="width:220px;">Bypass Paywalls v1.3.10 by Adam
+<div style="width:230px;">Bypass Paywalls v1.3.11 by Adam
 <a href="options.html">Options</a></div>
 </body>
 </html>
