@@ -1,6 +1,7 @@
 Updates--
 
-2018-10-02 v1.3.10: Added The Adovcate (theadvocate.com.au), added Examiner (examiner.com.au)
+2018-10-06 v1.3.11: Removed dn.se, fixed haaretz.co.il, fixed thestar.com
+2018-10-02 v1.3.10: Added The Advocate (theadvocate.com.au), added Examiner (examiner.com.au)
 2018-09-09 v1.3.9: Added japantimes.co.jp
 2018-08-31 v1.3.8: Added thestar.com
 2018-07-22 v1.3.7: Added towardsdatascience.com, fixed medium.com
